# KairoAssets

./: .gitignore  AssetFingerprint.cppm  AssetID.cppm  AssetManifest.cppm  AssetMetadata.cppm  AssetRegistry.cppm  AssetTypes.cppm  AtomicFile.cppm  BinaryFormat.cppm  CMakeLists.txt  DerivedArtifact.cppm  DerivedDataCache.cppm  ImportDatabase.cppm  Importer.cppm  ImporterRegistry.cppm  KairoAssets.cppm  MeshArtifact.cppm  OBJImporter.cppm  README.md  SourceWatcher.cppm
tests/: AssetTests.cpp
